--- a/briar-android/src/main/res/values-he/strings.xml
+++ b/briar-android/src/main/res/values-he/strings.xml
@@ -42,25 +42,25 @@
   <plurals name="private_message_notification_text">
     <item quantity="one">הודעה פרטית חדשה.</item>
     <item quantity="two">%d הודעות פריטות חדשות.</item>
-    <item quantity="many"></item>
+    <item quantity="many">%d הודעות פריטות חדשות.</item>
     <item quantity="other">%d הודעות פריטות חדשות.</item>
   </plurals>
   <plurals name="group_message_notification_text">
     <item quantity="one">הודעה קבוצתית חדשה.</item>
     <item quantity="two">%d הודעות קבוצתיות חדשות.</item>
-    <item quantity="many"></item>
+    <item quantity="many">%d הודעות קבוצתיות חדשות.</item>
     <item quantity="other">%d הודעות קבוצתיות חדשות.</item>
   </plurals>
   <plurals name="forum_post_notification_text">
     <item quantity="one">פוסט חדש בפורומים.</item>
     <item quantity="two">%d פוסטים חדשים בפורומים.</item>
-    <item quantity="many"></item>
+    <item quantity="many">%d פוסטים חדשים בפורומים.</item>
     <item quantity="other">%d פוסטים חדשים בפורומים.</item>
   </plurals>
   <plurals name="blog_post_notification_text">
     <item quantity="one">פוסט חדש בבלוגים.</item>
     <item quantity="two">%d פוסטים חדשים בבלוגים.</item>
-    <item quantity="many"></item>
+    <item quantity="many">%d פוסטים חדשים בבלוגים.</item>
     <item quantity="other">%d פוסטים חדשים בבלוגים.</item>
   </plurals>
   <!--Misc-->
@@ -130,7 +130,7 @@
   <plurals name="introduction_notification_text">
     <item quantity="one">נוסף איש קשר חדש.</item>
     <item quantity="two">נוספו %d אנשי קשר חדשים.</item>
-    <item quantity="many"></item>
+    <item quantity="many">נוספו %d אנשי קשר חדשים.</item>
     <item quantity="other">נוספו %d אנשי קשר חדשים.</item>
   </plurals>
   <!--Private Groups-->
@@ -138,7 +138,7 @@
   <plurals name="messages">
     <item quantity="one">הודעה %d</item>
     <item quantity="two">%d הודעות</item>
-    <item quantity="many"></item>
+    <item quantity="many">%d הודעות</item>
     <item quantity="other">%d הודעות</item>
   </plurals>
   <string name="groups_group_is_empty">קבוצה זו הינה ריקה</string>
@@ -178,7 +178,7 @@
   <plurals name="groups_invitations_open">
     <item quantity="one">הזמנה קבוצתית פתוחה %d</item>
     <item quantity="two">%dהזמנות קבוצתית פתוחות </item>
-    <item quantity="many"></item>
+    <item quantity="many">%dהזמנות קבוצתית פתוחות </item>
     <item quantity="other">%dהזמנות קבוצתית פתוחות </item>
   </plurals>
   <string name="groups_invitations_response_accepted_sent">הסכמתם להזמנה הקבוצתית מ- %s.</string>
@@ -204,7 +204,7 @@
   <plurals name="posts">
     <item quantity="one">פוסט %d</item>
     <item quantity="two">%d פוסטים</item>
-    <item quantity="many"></item>
+    <item quantity="many">%d פוסטים</item>
     <item quantity="other">%d פוסטים</item>
   </plurals>
   <string name="forum_new_entry_posted">הפוסט נוצר</string>
