--- a/briar-android/src/main/res/values-ca/strings.xml
+++ b/briar-android/src/main/res/values-ca/strings.xml
@@ -2,50 +2,50 @@
 <resources>
   <!--Setup-->
   <string name="setup_title">Benvingut a Briar</string>
-  <string name="setup_name_explanation">El vostre sobrenom es mostrarà al costat de qualsevol contingut que publiqueu. No podeu canviar-lo després de crear el compte.</string>
+  <string name="setup_name_explanation">El vostre sobrenom etiquetarà tot el que publiqueu. Després de crear el compte ja no podreu canviar el sobrenom.</string>
   <string name="setup_next">Següent</string>
-  <string name="setup_password_intro">Trieu una contrasenya</string>
-  <string name="setup_password_explanation">El vostre compte Briar s\'emmagatzema encriptada al vostre dispositiu, no al núvol. Si oblideu la vostra contrasenya o desinstal·leu Briar, no hi ha forma de recuperar el vostre compte.\n\nTrieu una contrasenya llarga que sigui difícil d\'endevinar, com ara quatre paraules aleatòries o deu lletres, números i símbols aleatoris.</string>
-  <string name="setup_doze_title">Connexions de fons</string>
-  <string name="setup_doze_intro">Per rebre missatges, Briar necessita estar connectat en segon pla.</string>
-  <string name="setup_doze_explanation">Per rebre missatges, Briar necessita estar connectat en segon pla. Desactiveu les optimitzacions de la bateria perquè Briar es mantingui connectat.</string>
+  <string name="setup_password_intro">Establiu una contrasenya</string>
+  <string name="setup_password_explanation">El compte de Briar s\'emmagatzema xifrat en el vostre dispositiu, no en el núvol. Si oblideu la contrasenya o desinstal·leu Briar no podreu recuperar el vostre compte ni les dades associades.\n\nTrieu una contrasenya llarga que sigui difícil d\'endevinar, com ara quatre paraules aleatòries o deu lletres, números i símbols aleatoris.</string>
+  <string name="setup_doze_title">Connexions en segon pla</string>
+  <string name="setup_doze_intro">Per rebre missatges Briar necessita estar connectat en segon pla.</string>
+  <string name="setup_doze_explanation">Per rebre missatges Briar necessita estar connectat en segon pla. Desactiveu les optimitzacions de la bateria per permetre que Briar resti sempre connectat.</string>
   <string name="setup_doze_button">Permet connexions</string>
   <string name="choose_nickname">Trieu el sobrenom</string>
   <string name="choose_password">Trieu la contrasenya</string>
   <string name="confirm_password">Confirmeu la contrasenya</string>
   <string name="name_too_long">El nom és massa llarg</string>
-  <string name="password_too_weak">La contrasenya és dèbil</string>
+  <string name="password_too_weak">La contrasenya és massa feble</string>
   <string name="passwords_do_not_match">Les contrasenyes no coincideixen</string>
-  <string name="create_account_button">Crear compte</string>
+  <string name="create_account_button">Crea el compte</string>
   <string name="more_info">Més informació</string>
-  <string name="don_t_ask_again">No ho tornis a preguntar</string>
-  <string name="setup_huawei_text">Feu clic al botó següent i assegureu-vos que Briar està protegit a la pantalla «Aplicacions protegides».</string>
-  <string name="setup_huawei_button">Protegeix el Briar</string>
-  <string name="setup_huawei_help">Si Briar no s\'afegeix a la llista d\'aplicacions protegides, no podrà executar-se en segon pla.</string>
-  <string name="warning_dozed">%s no ha pogut executar-se en segon pla</string>
+  <string name="don_t_ask_again">No tornis a preguntar-ho</string>
+  <string name="setup_huawei_text">Feu clic al botó següent i assegureu-vos de que Briar està protegit a la pantalla «Aplicacions protegides».</string>
+  <string name="setup_huawei_button">Protegeix Briar</string>
+  <string name="setup_huawei_help">Si no afegiu Briar a la llista d\'aplicacions protegides, s\'evitarà que Briar s\'executi en segon pla.</string>
+  <string name="warning_dozed">%s no s\'ha pogut executar en segon pla</string>
   <!--Login-->
-  <string name="enter_password">Introdueix la teva contrasenya:</string>
-  <string name="try_again">La contrasenya és incorrecta, torna-ho a provar</string>
+  <string name="enter_password">Escriviu la vostra contrasenya:</string>
+  <string name="try_again">La contrasenya és incorrecta, torni a escriure-la</string>
   <string name="sign_in_button">Inicia la sessió</string>
-  <string name="forgotten_password">He oblidat la contrasenya</string>
+  <string name="forgotten_password">No recordo la contrasenya</string>
   <string name="dialog_title_lost_password">Contrasenya perduda</string>
-  <string name="dialog_message_lost_password">El vostre compte de Briar s\'emmagatzema xifrat al vostre dispositiu, no al núvol; per tant no podem restaurar-ne la contrasenya. Voleu esborrar el compte i tornar a començar?\n\nAlerta: les vostres identitats, contactes i missatges es perdran per sempre.</string>
+  <string name="dialog_message_lost_password">El vostre compte de Briar s\'emmagatzema només en el vostre dispositiu i xifrat. La contrasenya, doncs, no es pot restablir. Voleu esborrar el compte i crear-ne un de nou?\n\nAtenció! Si esborreu el compte la vostra identitat, els contactes i els missatges antics es perdran per sempre.</string>
   <string name="startup_failed_notification_title">Briar no s\'ha pogut iniciar</string>
-  <string name="startup_failed_notification_text">Toqueu per obtenir més informació.</string>
+  <string name="startup_failed_notification_text">Feu un toc per obtenir més informació.</string>
   <string name="startup_failed_activity_title">Error iniciant Briar</string>
-  <string name="startup_failed_db_error">Per alguna raó, la vostra base de dades de Briar ha estat corrompuda i no es pot reparar. El vostre compte, les dades i els contactes s\'han perdut. Malhauradament, has de reinstal·lar Briar o crear un nou compte triant \"He oblidat la contrasenya\" en la pantalla on poses la contrasenya.</string>
-  <string name="startup_failed_data_too_old_error">El teu compte es va crear amb una versió antiga d\'aquesta app i no es pot obrir amb aquesta versió. O bé reinstal·les la versió antiga o crea un nou compte triant \"Ho oblidat la contrasenya\" en la pantalla on poses la contrasenya.</string>
-  <string name="startup_failed_data_too_new_error">Aquesta versió de l\'aplicació és massa antiga. Actualitzeu a la versió més recent i torneu-ho a provar.</string>
-  <string name="startup_failed_service_error">Briar no ha pogut engegar un connector necessari. La solució sol ser reinstal·lar Briar. De tota manera, tingueu en compte que si ho feu perdreu el vostre compte i totes les dades associades, doncs Briar no usa servidors centrals per desar les vostres dades.</string>
+  <string name="startup_failed_db_error">Per alguna raó, la base de dades de Briar s\'ha corromput i no es pot adobar. El vostre compte, les dades i els contactes s\'han perdut. Malauradament, heu de reinstal·lar Briar o bé crear un nou compte triant l\'opció \"No recordo la contrasenya\" quan se us demani la contrasenya.</string>
+  <string name="startup_failed_data_too_old_error">El vostre compte va ser creat amb una versió antiga de Briar i no es pot obrir amb la versió actual. O bé reinstal·leu la versió antiga o bé creeu un nou compte triant l\'opció \"No recordo la contrasenya\" quan se us demana la contrasenya.</string>
+  <string name="startup_failed_data_too_new_error">Aquesta versió de Briar és massa antiga. Actualitzeu Briar a la darrera versió i torneu a provar-ho.</string>
+  <string name="startup_failed_service_error">Briar no ha pogut engegar un connector imprescindible. La reinstal·lació de Briar acostuma a resoldre aquest problema. Tingueu en compte que si reinstal·leu, perdreu el vostre compte i les dades associades doncs Briar no usa servidors centrals per desar-les.</string>
   <plurals name="expiry_warning">
     <item quantity="one">Aquesta és una versió de prova de Briar. El vostre compte expira en %d dia i no es pot renovar.</item>
-    <item quantity="other">Aquesta és una versió de prova de Briar. El vostre compte expira en %d dies i no es pot renovar.</item>
+    <item quantity="other">Aquesta és una versió de prova de Briar. El vostre compte expirarà en %d dies i no es pot renovar.</item>
   </plurals>
   <string name="expiry_update">S\'ha ampliat la data de venciment de la prova. El vostre compte caducarà ara en %d dies.</string>
   <string name="expiry_date_reached">Aquest programa ha caducat.\nGràcies per haver-lo provat!</string>
-  <string name="download_briar">Per continuar utilitzant Briar, baixeu la versió 1.0.</string>
+  <string name="download_briar">Per continuar fent servir Briar, descarregueu-vos la versió 1.0.</string>
   <string name="create_new_account">Haureu de crear un compte nou, però podeu utilitzar el mateix sobrenom.</string>
-  <string name="download_briar_button">Baixa Briar 1.0</string>
+  <string name="download_briar_button">Descarrega Briar 1.0</string>
   <string name="startup_open_database">S\'està desxifrant la base de dades...</string>
   <string name="startup_migrate_database">S\'està actualitzant la base de dades...</string>
   <!--Navigation Drawer-->
@@ -66,24 +66,24 @@
   <string name="ongoing_notification_text">Toca per a obrir Briar.</string>
   <plurals name="private_message_notification_text">
     <item quantity="one">Missatge privat nou.</item>
-    <item quantity="other">1%d missatges privats nous.</item>
+    <item quantity="other">%d missatges privats nous.</item>
   </plurals>
   <plurals name="group_message_notification_text">
     <item quantity="one">Missatge de grup nou.</item>
-    <item quantity="other">1%d missatges de grup nous</item>
+    <item quantity="other">%d missatges de grup nous</item>
   </plurals>
   <plurals name="forum_post_notification_text">
     <item quantity="one"> Un nou missatge del fòrum.</item>
-    <item quantity="other">%d nous missatges del fòrum.</item>
+    <item quantity="other">%d missatges nous al fòrum.</item>
   </plurals>
   <plurals name="blog_post_notification_text">
     <item quantity="one">Una nova publicacions al bloc.</item>
-    <item quantity="other">%d noves publicacions al blog.</item>
+    <item quantity="other">%d publicacions noves al blog.</item>
   </plurals>
   <!--Misc-->
   <string name="now">Ara</string>
-  <string name="show">Mostrar</string>
-  <string name="hide">Ocultar</string>
+  <string name="show">Mostra</string>
+  <string name="hide">Oculta</string>
   <string name="ok">D\'acord</string>
   <string name="cancel">Cancel·la</string>
   <string name="got_it">D\'acord</string>
@@ -98,38 +98,38 @@
   <string name="open">Obre</string>
   <string name="no_data">Sense dades</string>
   <string name="ellipsis">...</string>
-  <string name="text_too_long">El text introduït és massa llarg</string>
+  <string name="text_too_long">El text és massa llarg</string>
   <string name="show_onboarding">Mostra el diàleg d\'ajuda.</string>
   <string name="fix">Corregeix</string>
   <string name="help">Ajuda</string>
   <string name="sorry">Ens sap greu</string>
   <!--Contacts and Private Conversations-->
-  <string name="no_contacts">No hi ha contactes\n\nPulsa l\'icona + per afegir un contacte</string>
+  <string name="no_contacts">No hi ha cap contacte\n\nPulseu l\'icona + per afegir un contacte</string>
   <string name="date_no_private_messages">Sense missatges.</string>
-  <string name="no_private_messages">No hi ha missatges</string>
-  <string name="message_hint">Escriu el missatge.</string>
-  <string name="delete_contact">Suprimeix contacte</string>
-  <string name="dialog_title_delete_contact">Confirma la supressió del contacte</string>
-  <string name="dialog_message_delete_contact">Estàs segur que vols esborrar aquest contacte i tots els missatges que hi has intercanviat?</string>
-  <string name="contact_deleted_toast">Contacte suprimit</string>
+  <string name="no_private_messages">No hi ha cap missatge</string>
+  <string name="message_hint">Escriviu un missatge</string>
+  <string name="delete_contact">Suprimeix el contacte</string>
+  <string name="dialog_title_delete_contact">Confirmeu la supressió del contacte</string>
+  <string name="dialog_message_delete_contact">Esteu convençut de suprimir aquest contacte i tots els missatges que us heu intercanviat?</string>
+  <string name="contact_deleted_toast">S\'ha suprimit el contacte</string>
   <!--Adding Contacts-->
-  <string name="add_contact_title">Afegir contacte</string>
-  <string name="face_to_face">T\'has de trobar amb la persona que vols afegir com a contacte.\n\nAixò evitarà que algú suplanti la teva identitat o llegeixi els teus missatges.</string>
+  <string name="add_contact_title">Afegeix un contacte</string>
+  <string name="face_to_face">Heu de coincidir en el mateix lloc amb la persona que voleu afegir com a contacte.\n\nD\'aquesta manera evitareu que algú suplanti les vostres identitats o pugui llegir els vostres missatges en el futur.</string>
   <string name="continue_button">Continua</string>
   <string name="connection_failed">La connexió ha fallat</string>
   <string name="try_again_button">Torna-ho a provar</string>
-  <string name="waiting_for_contact_to_scan">Esperant que el teu contacte escanegi i connecti\u2026</string>
+  <string name="waiting_for_contact_to_scan">Esperant que el vostre contacte escanegi i es connecti\u2026</string>
   <string name="exchanging_contact_details">Intercanviant els detalls del contacte\u2026</string>
   <string name="contact_added_toast">Contacte afegit: %s</string>
-  <string name="contact_already_exists">El contacte %s ja existeix</string>
+  <string name="contact_already_exists">El contacte %s ja existia</string>
   <string name="contact_exchange_failed">L\'intercanvi de contactes ha fallat</string>
   <string name="qr_code_invalid">El codi QR és invàlid</string>
-  <string name="qr_code_unsupported">El codi QR que intenteu escanejar pertany a una versió antiga de %s que ja no és compatible.\n\nAssegureu-vos que tots dos estiguin executant la versió més recent i torneu-ho a provar.</string>
+  <string name="qr_code_unsupported">El codi QR que intenteu escanejar pertany a una versió antiga de %s que ja no és compatible.\n\nAssegureu-vos que tothom està executant la darrera versió i torneu a provar-ho.</string>
   <string name="camera_error">Error de la càmera</string>
-  <string name="connecting_to_device">Connectant al dispositiu\u2026</string>
+  <string name="connecting_to_device">Connectant-se al dispositiu\u2026</string>
   <string name="authenticating_with_device">Autenticant-se amb el dispositiu\u2026</string>
   <string name="connection_aborted_local">S\'ha avortat la connexió! Això podria significar que algú intenta interferir amb la vostra connexió</string>
-  <string name="connection_aborted_remote">El teu contacte ha avortat la connexió! Això podria significar que algú està provant d\'interferir la vostra connexió</string>
+  <string name="connection_aborted_remote">El vostre contacte ha avortat la connexió! Això podria significar que algú està provant d\'interferir la vostra connexió</string>
   <!--Introductions-->
   <string name="introduction_onboarding_title">Introdueix els teus contactes</string>
   <string name="introduction_onboarding_text">Pots presentar els teus contactes entre si, de manera que no necessiten trobar-se en persona per a donar-se d\'alta com a contactes a Briar.</string>
