--- a/briar-android/src/main/res/values-hi/strings.xml
+++ b/briar-android/src/main/res/values-hi/strings.xml
@@ -31,7 +31,11 @@
   <string name="dialog_title_lost_password">पासवर्ड खो गया</string>
   <string name="dialog_message_lost_password">आपका ब्रियर खाता आपके डिवाइस पर एन्क्रिप्ट किया गया है, बादल में नहीं, इसलिए हम आपका पासवर्ड रीसेट नहीं कर सकते। क्या आप अपना खाता हटाना चाहते हैं और फिर से शुरू करना चाहते हैं? \ N \ n सावधानी: आपकी पहचान, संपर्क और संदेश स्थायी रूप से खो जाएंगे</string>
   <string name="startup_failed_notification_title">बियर शुरू नहीं हो सका</string>
+  <string name="startup_failed_notification_text">अधिक जानकारी के लिए टैप करें।</string>
   <string name="startup_failed_activity_title">ब्रियर स्टार्टअप विफलता</string>
+  <string name="startup_failed_db_error">किसी कारण से, आपका ब्रियर डेटाबेस मरम्मत से परे दूषित हो गया है। आपका खाता, आपका डेटा और आपके सभी संपर्क खो गए हैं। दुर्भाग्यवश, आपको पासवर्ड प्रॉम्प्ट पर \'मेरा पासवर्ड भूल गया है\' चुनकर ब्रियर को पुनर्स्थापित करने या एक नया खाता सेट अप करने की आवश्यकता है।</string>
+  <string name="startup_failed_data_too_old_error">आपका खाता इस ऐप के पुराने संस्करण के साथ बनाया गया था और इस संस्करण के साथ खोला नहीं जा सकता है। आपको या तो पुराने संस्करण को पुनर्स्थापित करना होगा या पासवर्ड प्रॉम्प्ट पर \'मैं अपना पासवर्ड भूल गया हूं\' चुनकर एक नया खाता सेट करना होगा।</string>
+  <string name="startup_failed_data_too_new_error">ऐप का यह संस्करण बहुत पुराना है। कृपया नवीनतम संस्करण में अपग्रेड करें और पुनः प्रयास करें।</string>
   <string name="startup_failed_service_error">ब्रियर एक आवश्यक प्लगइन प्रारंभ करने में असमर्थ था बरिअर को पुनः स्थापित करना आमतौर पर इस समस्या को हल करता है हालांकि, कृपया ध्यान दें कि बियर आपके डेटा को स्टोर करने के लिए केंद्रीय सर्वर का उपयोग नहीं कर रहा है, इसके बाद आप अपने खाता और उसके साथ जुड़े सभी डेटा खो देंगे।</string>
   <plurals name="expiry_warning">
     <item quantity="one">यह Briar का एक परीक्षण संस्करण है आपका खाता %dदिनों में समाप्त हो जाएगा और नवीनीकरण नहीं किया जा सकता है</item>
@@ -39,6 +43,11 @@
   </plurals>
   <string name="expiry_update">परीक्षण समाप्ति तिथि बढ़ा दी गई है। आपका खाता अब %d दिनों में समाप्त हो जाएगा</string>
   <string name="expiry_date_reached">यह सॉफ्टवेयर समाप्त हो गया है। \n परीक्षण के लिए धन्यवाद!</string>
+  <string name="download_briar">ब्रियर का उपयोग जारी रखने के लिए, कृपया संस्करण 1.0 डाउनलोड करें।</string>
+  <string name="create_new_account">आपको एक नया खाता बनाना होगा, लेकिन आप उसी उपनाम का उपयोग कर सकते हैं।</string>
+  <string name="download_briar_button">ब्रायर 1.0 डाउनलोड करें</string>
+  <string name="startup_open_database">डेटाबेस डिक्रिप्ट कर रहा है ...</string>
+  <string name="startup_migrate_database">डाटाबेस का उन्नयन ...</string>
   <!--Navigation Drawer-->
   <string name="nav_drawer_open_description">नेविगेशन ड्रॉवर खोलें</string>
   <string name="nav_drawer_close_description">नेविगेशन ड्रॉवर को बंद करें</string>
@@ -93,8 +102,11 @@
   <string name="show_onboarding">सहायता संवाद दिखाएं</string>
   <string name="fix">ठीक कर</string>
   <string name="help">सहायता</string>
+  <string name="sorry">माफ़ कीजिये</string>
   <!--Contacts and Private Conversations-->
+  <string name="no_contacts">कोई संपर्क दिखाने के लिए \ n \ n टैप + आइकन टैप करने के लिए कोई संपर्क नहीं है</string>
   <string name="date_no_private_messages">कोई संदेश नहीं।</string>
+  <string name="no_private_messages">दिखाने के लिए कोई संदेश नहीं</string>
   <string name="message_hint">संदेश लिखें</string>
   <string name="delete_contact">संपर्क मिटा दें</string>
   <string name="dialog_title_delete_contact">संपर्क हटाने की पुष्टि करें</string>
@@ -112,6 +124,7 @@
   <string name="contact_already_exists">संपर्क%s पहले से मौजूद है</string>
   <string name="contact_exchange_failed">संपर्क विनिमय विफल</string>
   <string name="qr_code_invalid">QR कोड अमान्य है</string>
+  <string name="qr_code_unsupported">क्यूआर कोड जिसे आप स्कैन करने का प्रयास कर रहे हैं वह पुराने संस्करण से संबंधित है %sजिसका अब समर्थित नहीं है। \ N \ n कृपया सुनिश्चित करें कि आप दोनों नवीनतम संस्करण चला रहे हैं और फिर पुन: प्रयास करें।</string>
   <string name="camera_error">कैमरा त्रुटि</string>
   <string name="connecting_to_device">उपकरण \ u2026 से कनेक्ट हो रहा है</string>
   <string name="authenticating_with_device">डिवाइस के साथ प्रमाणीकरण \ u2026</string>
@@ -121,6 +134,7 @@
   <string name="introduction_onboarding_title">अपने संपर्कों का परिचय दें</string>
   <string name="introduction_onboarding_text">आप अपने संपर्कों को एक दूसरे से जोड़ सकते हैं, इसलिए उन्हें ब्रियर से जुड़ने के लिए व्यक्तिगत रूप से मिलने की जरूरत नहीं है।</string>
   <string name="introduction_activity_title">संपर्क का चयन करें</string>
+  <string name="introduction_not_possible">इन संपर्कों के साथ आपके पास पहले से ही एक परिचय प्रगति है। कृपया इसे पहले खत्म करने की अनुमति दें। यदि आप या आपके संपर्क शायद ही कभी ऑनलाइन हैं, तो इसमें कुछ समय लग सकता है।</string>
   <string name="introduction_message_title">संपर्कों का परिचय</string>
   <string name="introduction_message_hint">एक संदेश जोड़ें (वैकल्पिक)</string>
   <string name="introduction_button">परिचय करें</string>
@@ -132,6 +146,7 @@
   <string name="introduction_request_exists_received">%1$sने आपको%2$s में लाने के लिए कहा है, लेकिन%2$s आपकी संपर्क सूची में पहले से मौजूद है। चूंकि%1$s शायद यह नहीं जान पाए, आप फिर भी जवाब दे सकते हैं:</string>
   <string name="introduction_request_answered_received">%1$sने आपको%2$s में पेश करने को कहा है</string>
   <string name="introduction_response_accepted_sent">आपने%1$s की शुरूआत स्वीकार कर ली है</string>
+  <string name="introduction_response_accepted_sent_info">आपके %1$sसंपर्कों में शामिल होने से पहले, उन्हें भी परिचय स्वीकार करने की आवश्यकता है। इसमें कुछ समय लग सकता है।</string>
   <string name="introduction_response_declined_sent">आपने%1$s की शुरुआत करने से मना कर दिया</string>
   <string name="introduction_response_accepted_received">%1$s%2$s की शुरूआत स्वीकार कर ली</string>
   <string name="introduction_response_declined_received">%1$s%2$sकी शुरूआत में गिरावट आई</string>
@@ -141,6 +156,7 @@
     <item quantity="other">%dनया संपर्क जोड़ा।</item>
   </plurals>
   <!--Private Groups-->
+  <string name="groups_list_empty">कोई समूह दिखाने के लिए \ n \ n समूह बनाने के लिए + आइकन टैप करें, या अपने संपर्कों को समूहों के साथ साझा करने के लिए कहें</string>
   <string name="groups_created_by">के द्वारा बनाई गई%s</string>
   <plurals name="messages">
     <item quantity="one">संदेशों%d</item>
@@ -193,10 +209,12 @@
   <string name="groups_reveal_visible_revealed_by_contact">संपर्क संबंध समूह को दिखाई देता है (%s द्वारा पता चला है)</string>
   <string name="groups_reveal_invisible">संपर्क संबंध समूह को दिखाई नहीं दे रहा है</string>
   <!--Forums-->
+  <string name="no_forums">कोई फोरम दिखाने के लिए \ n \ n फोरम बनाने के लिए + आइकन टैप करें, या अपने संपर्कों को आपके साथ मंच साझा करने के लिए कहें</string>
   <string name="create_forum_title">फोरम बनाएँ</string>
   <string name="choose_forum_hint">अपने मंच का नाम चुनें</string>
   <string name="create_forum_button">फोरम बनाएँ</string>
   <string name="forum_created_toast">फोरम बनाया</string>
+  <string name="no_forum_posts">दिखाने के लिए कोई पोस्ट नहीं</string>
   <string name="no_posts">कोई पोस्ट नहीं</string>
   <plurals name="posts">
     <item quantity="one">%dपदों</item>
@@ -208,17 +226,23 @@
   <string name="btn_reply">जवाब दें</string>
   <string name="forum_leave">फोरम छोड़ें</string>
   <string name="dialog_title_leave_forum">फोरम छोड़ने की पुष्टि करें</string>
+  <string name="dialog_message_leave_forum">क्या आप वाकई इस मंच को छोड़ना चाहते हैं? \ N \ n आपके द्वारा इस मंच को साझा करने वाले किसी भी संपर्क के साथ अपडेट प्राप्त करना बंद हो सकता है।</string>
   <string name="dialog_button_leave">छोड़ना</string>
+  <string name="forum_left_toast">वाम मंच</string>
   <!--Forum Sharing-->
   <string name="forum_share_button">शेयर फ़ोरम</string>
   <string name="contacts_selected">संपर्क चयनित</string>
   <string name="activity_share_toolbar_header">संपर्क चुनें</string>
+  <string name="no_contacts_selector">कोई संपर्क दिखाने के लिए \ n \ n संपर्क जोड़ने के बाद यहां वापस आएं</string>
   <string name="forum_shared_snackbar">चयनित संपर्कों के साथ फ़ोरम साझा किया गया</string>
   <string name="forum_share_message">एक संदेश जोड़ें (वैकल्पिक)</string>
   <string name="forum_share_error">इस फ़ोरम को साझा करने में कोई त्रुटि थी।</string>
   <string name="forum_invitation_received">%1$sने आपके साथ \"%2$s\" मंच साझा किया है</string>
   <string name="forum_invitation_sent">आपने%2$s के साथ \"%1$s\" मंच साझा किया है</string>
   <string name="forum_invitations_title">फोरम निमंत्रण</string>
+  <string name="forum_invitation_exists">आपने पहले से ही इस मंच पर एक निमंत्रण स्वीकार कर लिया है। \ N \ n अधिक आमंत्रण स्वीकार करने से मंच से आपका कनेक्शन तेजी से और अधिक विश्वसनीय हो जाएगा।</string>
+  <string name="forum_joined_toast">फोरम में शामिल</string>
+  <string name="forum_declined_toast">आमंत्रण में कमी आई</string>
   <string name="shared_by_format">%s द्वारा साझा किया गया</string>
   <string name="forum_invitation_already_sharing">पहले से ही साझा करना</string>
   <string name="forum_invitation_response_accepted_sent">आपने%s से मंच निमंत्रण स्वीकार कर लिया है</string>
@@ -234,14 +258,19 @@
   </plurals>
   <string name="nobody">कोई भी नहीं</string>
   <!--Blogs-->
+  <string name="blogs_other_blog_empty_state">दिखाने के लिए कोई पोस्ट नहीं</string>
   <string name="read_more">अधिक पढ़ें</string>
   <string name="blogs_write_blog_post">ब्लॉग पोस्ट लिखें</string>
+  <string name="blogs_write_blog_post_body_hint">अपना ब्लॉग पोस्ट टाइप करें</string>
   <string name="blogs_publish_blog_post">प्रकाशित करना</string>
   <string name="blogs_blog_post_created">ब्लॉग पोस्ट बनाया</string>
   <string name="blogs_blog_post_received">नया ब्लॉग पोस्ट प्राप्त हुआ</string>
   <string name="blogs_blog_post_scroll_to">स्क्रॉल टू</string>
+  <string name="blogs_feed_empty_state">दिखाने के लिए कोई पोस्ट नहीं \ n \ n आपके संपर्कों और ब्लॉगों से पोस्ट की जाने वाली पोस्ट यहां दिखाई देगी \ n \ n एक पोस्ट लिखने के लिए पेन आइकन टैप करें</string>
   <string name="blogs_remove_blog">ब्लॉग निकालें</string>
+  <string name="blogs_remove_blog_dialog_message">क्या आप वाकई इस ब्लॉग को हटाना चाहते हैं? \ N \ n पोस्ट आपके डिवाइस से हटा दिए जाएंगे, लेकिन अन्य लोगों के डिवाइस से नहीं। \ N \ n आपके द्वारा इस ब्लॉग को साझा करने वाले किसी भी संपर्क को अपडेट प्राप्त करना बंद हो सकता है।</string>
   <string name="blogs_remove_blog_ok">हटाना</string>
+  <string name="blogs_blog_removed">ब्लॉग हटा दिया गया</string>
   <string name="blogs_reblog_comment_hint">एक टिप्पणी जोड़ें (वैकल्पिक)</string>
   <string name="blogs_reblog_button">पुनः ब्लॉग</string>
   <!--Blog Sharing-->
@@ -256,6 +285,8 @@
   <string name="blogs_sharing_invitation_received">%1$sने आपके साथ \"%2$s\" ब्लॉग को साझा किया है</string>
   <string name="blogs_sharing_invitation_sent">आपने %1$s को%2$s के साथ साझा किया है</string>
   <string name="blogs_sharing_invitations_title">ब्लॉग आमंत्रण</string>
+  <string name="blogs_sharing_joined_toast">ब्लॉग के लिए सदस्यता लें</string>
+  <string name="blogs_sharing_declined_toast">आमंत्रण में कमी आई</string>
   <string name="sharing_status_blog">जो कोई भी ब्लॉग के लिए सदस्यता लेता है, उसे अपने संपर्कों के साथ साझा कर सकता है आप इस ब्लॉग को निम्नलिखित संपर्कों के साथ साझा कर रहे हैं। ऐसे अन्य सदस्य भी हो सकते हैं जिन्हें आप नहीं देख सकते हैं।</string>
   <!--RSS Feeds-->
   <string name="blogs_rss_feeds_import">आरएसएस फ़ीड आयात करें</string>
@@ -267,8 +298,10 @@
   <string name="blogs_rss_feeds_manage_author">लेखक:</string>
   <string name="blogs_rss_feeds_manage_updated">आखरी अपडेट:</string>
   <string name="blogs_rss_remove_feed">फ़ीड निकालें</string>
+  <string name="blogs_rss_remove_feed_dialog_message">क्या आप वाकई इस फीड को हटाना चाहते हैं? \ N \ n पोस्ट आपके डिवाइस से हटा दिए जाएंगे, लेकिन अन्य लोगों के डिवाइस से नहीं। \ N \ n आपके द्वारा इस फ़ीड को साझा करने वाले किसी भी संपर्क को अपडेट प्राप्त करना बंद हो सकता है।</string>
   <string name="blogs_rss_remove_feed_ok">हटाना</string>
   <string name="blogs_rss_feeds_manage_delete_error">फीड हटाया नहीं जा सका!</string>
+  <string name="blogs_rss_feeds_manage_empty_state">कोई आरएसएस फ़ीड दिखाने के लिए फ़ीड नहीं करता \ n \ n फ़ीड आयात करने के लिए + आइकन टैप करें</string>
   <string name="blogs_rss_feeds_manage_error">आपकी फ़ीड लोड करने में एक समस्या थी बाद में पुन: प्रयास करें।</string>
   <!--Settings Network-->
   <string name="network_settings_title">नेटवर्क</string>
@@ -305,12 +338,16 @@
   <string name="notification_settings_title">सूचनाएं</string>
   <string name="notify_private_messages_setting_title">निजी संदेश</string>
   <string name="notify_private_messages_setting_summary">निजी संदेशों के लिए अलर्ट दिखाएं</string>
+  <string name="notify_private_messages_setting_summary_26">निजी संदेशों के लिए अलर्ट कॉन्फ़िगर करें</string>
   <string name="notify_group_messages_setting_title">समूह संदेश</string>
   <string name="notify_group_messages_setting_summary">समूह संदेशों के लिए अलर्ट्स दिखाएं</string>
+  <string name="notify_group_messages_setting_summary_26">समूह संदेशों के लिए अलर्ट कॉन्फ़िगर करें</string>
   <string name="notify_forum_posts_setting_title">फ़ोरम पोस्ट</string>
   <string name="notify_forum_posts_setting_summary">फ़ोरम पोस्ट के लिए अलर्ट्स दिखाएं</string>
+  <string name="notify_forum_posts_setting_summary_26">फोरम पोस्ट के लिए अलर्ट कॉन्फ़िगर करें</string>
   <string name="notify_blog_posts_setting_title">वेबदैनिकी डाक</string>
   <string name="notify_blog_posts_setting_summary">ब्लॉग पोस्ट के लिए अलर्ट्स दिखाएं</string>
+  <string name="notify_blog_posts_setting_summary_26">ब्लॉग पोस्ट के लिए अलर्ट कॉन्फ़िगर करें</string>
   <string name="notify_vibration_setting">कांपना</string>
   <string name="notify_lock_screen_setting_title">लॉक स्क्रीन</string>
   <string name="notify_lock_screen_setting_summary">लॉक स्क्रीन पर सूचनाएं दिखाएं</string>
@@ -354,4 +391,6 @@
   <string name="permission_camera_request_body">QR कोड को स्कैन करने के लिए, Briar को कैमरे तक पहुंच की आवश्यकता है।</string>
   <string name="permission_camera_denied_body">आपने कैमरे तक पहुंच से वंचित किया है, लेकिन संपर्क जोड़ने के लिए कैमरे का उपयोग करने की आवश्यकता है। \ N \ n कृपया पहुंच प्रदान करने पर विचार करें।</string>
   <string name="permission_camera_denied_toast">कैमरा अनुमति नहीं दी गई थी</string>
+  <string name="qr_code">क्यूआर कोड</string>
+  <string name="show_qr_code_fullscreen">क्यूआर कोड पूर्णस्क्रीन दिखाएं</string>
 </resources>
